--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: my-app
     spec:
       containers:
-      - image: vinutha25/Mavenbuild
+      - image: vinutha25/mavenbuild:${imagetag}
         name: my-app
         ports:
         - containerPort: 8080
