--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Mavenbuild
+  name: mavenbuild
 spec:
   selector: 
-    app: Mavenbuild
+    app: mavenbuild
   type: NodePort  
   ports:
     - port: 8080
